--- a/css/detalle.css
+++ b/css/detalle.css
@@ -1,127 +1,8 @@
-body{
-    padding: 10px;
-    margin: 0px;
-}
-
-header{
-    background-color: yellow;
-    
-}
-
-nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 5%;
-    padding-right: 5%;
-}
-
-header nav input[type="search"]{
-    padding: 5px;
-    width: 30%;
-    height: 30px;
-    border-radius: 5%;
-    outline: none;
-}
-
-header nav .Carrito{
+header nav .Logo img {
     display: flex;
     width: -100px;
     height: 60px;
     padding-bottom: 10px;
-}
-
-header nav .Logo{
-    display: flex;
-    width: -100px;
-    height: 60px;
-    padding-bottom: 10px;
-}
-
-.img_Menu img{
-    width: 100%;
-    
-}
-
-ul li{
-    display: inline-block;
-    padding: 0px 160px;
-}
-
-ul li .Columna1{
-    padding: 40px;
-    margin: 0px 20px;
-    background-color: blue;
-}
-
-ul li .Columna2{
-    padding: 40px;
-    margin: 0px 20px;
-    background-color: blue;
-}
-
-ul li .Columna3{
-    padding: 40px;
-    margin: 0px 20px;
-    background-color: blue;
-}
-
-section h2{
-    padding-top: 80px;
-    text-align: center;
-
-}
-
-section .Cursos{
-    display:flex;
-    justify-content: space-between;
-    padding: 0px 190px; 
-}
-
-section .Cursos .C1{
-    padding: 30px;
-    margin: 0px 40px;
-    background-color: blue;
-}
-
-section .Cursos .C2{
-    padding: 30px;
-    margin: 0px 40px;
-    background-color: blue;
-}
-
-section .Cursos .C3{
-    padding: 30px;
-    margin: 0px 40px;
-    background-color: blue;
-}
-
-section .Cursos2{
-    display:flex;
-    justify-content: space-between;
-    padding-top: 80px;
-    padding-left: 190px;
-    padding-right: 190px;
-}
-
-section .Cursos2 .C4{
-    padding: 30px;
-    margin: 0px 40px;
-    background-color: blue;
-}
-
-section .Cursos2 .C5{
-    padding: 30px;
-    margin: 0px 40px;
-    background-color: blue;
-}
-
-section .Cursos2 .C6{
-    padding: 30px;
-    margin: 0px 40px;
-    background-color: blue;
 }
 
 .curso-detalle {
@@ -131,8 +12,8 @@ section .Cursos2 .C6{
 }
 
 .curso-imagen img {
-    width: 100px;
-    height: auto;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
     border-radius: 10px;
 }
@@ -153,9 +34,9 @@ section .Cursos2 .C6{
     margin-left: 20px;
 }
 
-.docente-foto img {
-    width: 100px;
-    height: auto;
+.docente-imagen img {
+    width: 150px;
+    height: 150px;
     object-fit: cover;
     border-radius: 10px;
 }
@@ -215,30 +96,9 @@ section .Cursos2 .C6{
     text-align: center;
 }
 
-.btn-detalle {
-    background-color: royalblue;
-    color: white;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    border-radius: 5px;
-    margin-top: 10px;
-}
-
-.btn-detalle:hover {
-    background-color: royalblue;
-}
-
-.btn-inscribirse{
-    background-color: royalblue;
-    color: white;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    border-radius: 5px;
-    margin-top: 10px;
-}
-
-.btn-inscribirse:hover {
-    background-color: royalblue;
+.python-imagen img, .php-imagen img, .javascript-imagen img, .sql-imagen img{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 10px;
 }
